--- a/.github/workflows/contrib-mgmt.yml
+++ b/.github/workflows/contrib-mgmt.yml
@@ -7,10 +7,6 @@ on:
     types: [opened]
   discussion:
     types: [created]
-  issue_comment:
-    types: [created]
-  pull_request_review_comment:
-    types: [created]
 
 permissions:
   issues: write
@@ -25,40 +21,40 @@ jobs:
   handle-contributions:
     runs-on: ubuntu-latest
     steps:
-    - name: Close Issue
-      if: github.event_name == 'issues'
-      run: |
-        gh issue close ${{ github.event.issue.number }} --repo ${{ github.repository }} --comment "This repository does not accept issues."
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Close Issue
+        if: github.event_name == 'issues'
+        run: |
+          gh issue close ${{ github.event.issue.number }} --repo ${{ github.repository }} --comment "This repository does not accept issues."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Close Pull Request (Non-Owner)
-      if: |
-        github.event_name == 'pull_request' &&
-        github.actor != github.repository_owner
-      run: |
-        gh pr close ${{ github.event.pull_request.number }} --repo ${{ github.repository }} --comment "This repository does not accept pull requests from contributors."
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Handle Pull Request
+        if: github.event_name == 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          PR_AUTHOR="${{ github.event.pull_request.user.login }}"
+          REPO_OWNER="$(cut -d'/' -f1 <<< "${{ github.repository }}")"
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          PR_BODY="${{ github.event.pull_request.body }}"
 
-    - name: Close Discussion
-      if: github.event_name == 'discussion'
-      run: |
-        gh discussion close ${{ github.event.discussion.number }} --repo ${{ github.repository }} --comment "This repository does not accept discussions."
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          lowercase_body="$(echo "$PR_BODY" | tr '[:upper:]' '[:lower:]')"
 
-  auto-merge-owner:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment'
-    steps:
-    - name: Auto-merge PR on "merge" comment by repo owner
-      if: |
-        github.actor == github.repository_owner &&
-        github.event.comment.body == 'merge' &&
-        github.event.issue.pull_request
-      run: |
-        PR_NUMBER=$(echo "${{ github.event.issue.number }}")
-        gh pr merge $PR_NUMBER --repo ${{ github.repository }} --merge
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          if [[ "$PR_AUTHOR" == "$REPO_OWNER" ]]; then
+            if [[ "$lowercase_body" == *"done"* || "$lowercase_body" == *"merge"* || "$lowercase_body" == *"good"* ]]; then
+              echo "Author is repo owner and message indicates approval. Merging PR..."
+              gh pr merge "$PR_NUMBER" --repo "${{ github.repository }}" --merge --body "Auto-merged by workflow."
+            else
+              echo "Author is repo owner but no approval keyword found. Leaving PR open."
+            fi
+          else
+            echo "PR from external contributor. Closing..."
+            gh pr close "$PR_NUMBER" --repo "${{ github.repository }}" --comment "This repository does not accept pull requests from external contributors."
+          fi
+
+      - name: Close Discussion
+        if: github.event_name == 'discussion'
+        run: |
+          gh discussion close ${{ github.event.discussion.number }} --repo ${{ github.repository }} --comment "This repository does not accept discussions."
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
