--- a/.github/workflows/contrib-mgmt.yml
+++ b/.github/workflows/contrib-mgmt.yml
@@ -7,6 +7,8 @@ on:
     types: [opened]
   discussion:
     types: [created]
+  issue_comment:
+    types: [created]
 
 permissions:
   contents: write
@@ -40,19 +42,40 @@ jobs:
           REPO_OWNER="$(cut -d'/' -f1 <<< "${{ github.repository }}")"
           PR_NUMBER="${{ github.event.pull_request.number }}"
           PR_BODY="${{ github.event.pull_request.body }}"
-          
           lowercase_body="$(echo "$PR_BODY" | tr '[:upper:]' '[:lower:]')"
 
           if [[ "$PR_AUTHOR" == "$REPO_OWNER" ]]; then
             if [[ "$lowercase_body" == *"done"* || "$lowercase_body" == *"merge"* || "$lowercase_body" == *"good"* ]]; then
-              echo "Author is repo owner and message indicates approval. Merging PR..."
+              echo "Author is repo owner and PR description indicates approval. Merging PR..."
               gh pr merge "$PR_NUMBER" --repo "${{ github.repository }}" --merge --body "Auto-merged by workflow."
             else
-              echo "Author is repo owner but no approval keyword found. Leaving PR open."
+              echo "Author is repo owner but no approval keyword found in description. Leaving PR open."
             fi
           else
             echo "PR from external contributor. Closing..."
             gh pr close "$PR_NUMBER" --repo "${{ github.repository }}" --comment "This repository does not accept pull requests from external contributors."
+          fi
+
+      - name: Handle Approval Comment on PR
+        if: github.event_name == 'issue_comment' && github.event.issue.pull_request != ''
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          COMMENT_AUTHOR="${{ github.event.comment.user.login }}"
+          REPO_OWNER="$(cut -d'/' -f1 <<< "${{ github.repository }}")"
+          COMMENT_BODY="${{ github.event.comment.body }}"
+          ISSUE_NUMBER="${{ github.event.issue.number }}"
+          lowercase_comment="$(echo "$COMMENT_BODY" | tr '[:upper:]' '[:lower:]')"
+
+          if [[ "$COMMENT_AUTHOR" == "$REPO_OWNER" ]]; then
+            if [[ "$lowercase_comment" == *"done"* || "$lowercase_comment" == *"merge"* || "$lowercase_comment" == *"good"* ]]; then
+              echo "Repo owner left an approval comment. Attempting to merge PR #$ISSUE_NUMBER..."
+              gh pr merge "$ISSUE_NUMBER" --repo "${{ github.repository }}" --merge --body "Auto-merged by workflow (via comment)."
+            else
+              echo "Comment from repo owner did not contain approval keywords."
+            fi
+          else
+            echo "Comment author is not the repo owner. Ignoring comment."
           fi
 
       - name: Close Discussion
